Working backend, routes, database and server

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,10 @@
   "author": "Nkhatho Mahlomaholo",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "dev": "nodemon ./server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
