changed start script

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "dev": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
